@@ -3,6 +3,14 @@
 	Backport from mainline
 	2017-03-03  Martin Liska  <mliska@suse.cz>
 
+	PR tree-optimization/79803
+	* gcc.dg/tree-ssa/pr79803.c: New test.
+
+2017-03-22  Martin Liska  <mliska@suse.cz>
+
+	Backport from mainline
+	2017-03-03  Martin Liska  <mliska@suse.cz>
+
 	PR rtl-optimization/79574
 	* gcc.dg/pr79574-2.c: New test.
 
